try to fix non visible gravatar -> picture in bio

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -70,10 +70,11 @@
 
 .fun {
     height: 30px;
+    position: center;
 }
 
 .amanox {
-    position: center + 94.74665px;
+    position: center;
     width: 50%;
     animation-duration: 3s;
     animation-name: amanox;
